--- a/Application/Admin/View/themes/Public/left.html
+++ b/Application/Admin/View/themes/Public/left.html
@@ -34,11 +34,11 @@
                                 </li>
                                 <li class="divider"></li>
                                 <li>
-                                    <a href="login.html">安全退出</a>
+                                    <a href="{:U('User/logout')}">安全退出</a>
                                 </li>
                             </ul>
                         </div>
-                        <div class="logo-element">H+</div>
+                        <div class="logo-element">投富宝</div>
 
                     </li>
 
