--- a/Application/Home/View/themes/Public/head.html
+++ b/Application/Home/View/themes/Public/head.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>Document</title>
+	<title>工合投富宝认购平台--最好的认购投资平台</title>
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Home/css/style.css"/>
 	<script src="__PUBLIC__/Home/js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="__PUBLIC__/Home/js/public.js" type="text/javascript" charset="utf-8"></script>
