--- a/Application/Admin/View/themes/Index/index.html
+++ b/Application/Admin/View/themes/Index/index.html
@@ -3,7 +3,7 @@
 	    <div class="row border-bottom">
 	        <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
 	            <div class="navbar-header">
-	                <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="index_1.html#"><i class="fa fa-bars"></i> </a>
+	                <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#" title="点击收起侧边栏"><i class="fa fa-bars"></i> </a>
 	                <form role="search" class="navbar-form-custom" method="post" action="search_results.html">
 	                    <div class="form-group">
 	                        <input type="text" placeholder="请输入您需要查找的内容 …" class="form-control" name="top-search" id="top-search">
@@ -12,7 +12,7 @@
 	            </div>
 	            <ul class="nav navbar-top-links navbar-right">
 	                <li>
-	                    <span class="m-r-sm text-muted welcome-message"><a href="index.html" title="返回首页"><i class="fa fa-home"></i></a>欢迎使用H+后台主题</span>
+	                    <span class="m-r-sm text-muted welcome-message"><a href="index.html" title="返回首页"><i class="fa fa-home"></i></a>欢迎使用投富宝后台管理系统</span>
 	                </li>
 	                <li class="dropdown">
 	                    <a class="dropdown-toggle count-info" data-toggle="dropdown" href="index.html#">
@@ -92,7 +92,7 @@
 
 
 	                <li>
-	                    <a href="login.html">
+	                    <a href="{:U('User/logout')}">
 	                        <i class="fa fa-sign-out"></i> 退出
 	                    </a>
 	                </li>
