--- a/Application/Home/View/themes/Public/left.html
+++ b/Application/Home/View/themes/Public/left.html
@@ -34,7 +34,7 @@
 				<ul>
 					<li><h4 style="background: url(images/pcLIcons.png) no-repeat 15px -120px;">消息中心</h4></li>
 					<li><a href="javascript:;">基本信息</a></li>
-					<li><a href="javascript:;">消息通知</a></li>
+					<li><a href="{:U('User/msglist')}">消息通知</a></li>
 					<li><a href="javascript:;">通知设置</a></li>
 				</ul>
 				
