--- a/Public/Home/css/style.css
+++ b/Public/Home/css/style.css
@@ -1845,13 +1845,13 @@ a:hover{color: #e60000; text-decoration: none;}
 	width: 958px;
 	height: auto;
 }
-.notiWay .notiWay01,.notiWay .notiWay02{
+.pc .pcR .notiWay .notiWay01,.pc .pcR .notiWay .notiWay02{
 	width: 888px;
 	height: 240px;
 	padding: 35px;
 	border-bottom: 1px solid #eee;
 }
-.notiWay .notiWay01 h4,.notiWay .notiWay02 h4{
+.pc .pcR .notiWay .notiWay01 h4,.pc .pcR .notiWay .notiWay02 h4{
 	width: 100%;
 	height: 40px;
 	line-height: 40px;
@@ -1860,26 +1860,26 @@ a:hover{color: #e60000; text-decoration: none;}
 	font-size: 14px;
 	margin-bottom: 30px;
 }
-.notiWay .notiWay01 h4 label,.notiWay .notiWay02 h4 label{
+.pc .pcR .notiWay .notiWay01 h4 label,.pc .pcR .notiWay .notiWay02 h4 label{
 	float: left;
 	width: 100px;
 	overflow: hidden;
 }
-.notiWay .notiWay01 h4 p,.notiWay .notiWay02 h4 p{
+.pc .pcR .notiWay .notiWay01 h4 p,.pc .pcR .notiWay .notiWay02 h4 p{
 	float: left;
 	color: #E60000;
 }
-.notiWay .notiWay01 h4 label input,.notiWay .notiWay02 h4 label input,.notiWay .notiWay01 ul li label input,.notiWay .notiWay02 ul li label input{
+.pc .pcR .notiWay .notiWay01 h4 label input,.pc .pcR .notiWay .notiWay02 h4 label input,.pc .pcR .notiWay .notiWay01 ul li label input,.pc .pcR .notiWay .notiWay02 ul li label input{
 	float: left;
 	margin:15px 5px 0 0 ;
 }
-.notiWay .notiWay01 h4 label span,.notiWay .notiWay02 h4 label span,.notiWay .notiWay01 ul li label span,.notiWay .notiWay02 ul li label span{
+.pc .pcR .notiWay .notiWay01 h4 label span,.pc .pcR .notiWay .notiWay02 h4 label span,.pc .pcR .notiWay .notiWay01 ul li label span,.pc .pcR .notiWay .notiWay02 ul li label span{
 	float: left;
 }
-.notiWay .notiWay01 ul,.notiWay .notiWay02 ul,.notiWay .notiWay01 ul li label,.notiWay .notiWay02 ul li label{
+.pc .pcR .notiWay .notiWay01 ul,.pc .pcR .notiWay .notiWay02 ul,.pc .pcR .notiWay .notiWay01 ul li label,.pc .pcR .notiWay .notiWay02 ul li label{
 	overflow: hidden;	
 }
-.notiWay .notiWay01 ul li,.notiWay .notiWay02 ul li{
+.pc .pcR .notiWay .notiWay01 ul li,.pc .pcR .notiWay .notiWay02 ul li{
 	float: left;
 	width: auto;
 	padding: 0 10px;
@@ -1887,7 +1887,7 @@ a:hover{color: #e60000; text-decoration: none;}
 	line-height: 40px;
 	font-size: 14px;
 }
-.notiWay .notiWay02{
+.pc .pcR .notiWay .notiWay02{
 	border-bottom: none;
 	margin-top: 40px;
 }
@@ -1899,15 +1899,87 @@ a:hover{color: #e60000; text-decoration: none;}
 
 
 
-
-
-
-
-
-
-
-
-
+/*----------------------个人中心-推广管理--------------------------------*/
+.pc .pcR .inviFri,.pc .pcR .promoList,.pc .pcR .reward{
+	width: 888px;
+	height: auto;
+	padding: 35px;
+}
+.pc .pcR .inviFri .tips,.pc .pcR .reward .tips{
+	width: 100%;
+	height: auto;
+	line-height: 30px;
+	font-size: 14px;
+	background: #ededed;
+	color: #555;
+	padding: 20px;
+	box-sizing: border-box;
+}
+/*好友邀请*/
+.pc .pcR .inviFri dl{
+	margin: 30px 0;
+}
+.pc .pcR .inviFri dl dt{
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	font-size: 18px;
+	color: #333;
+}
+.pc .pcR .inviFri dl dd{
+	width: 100%;
+	height: 40px;
+	line-height: 40px;
+	color: #E60000;
+	font-size: 14px;
+}
+/*推广列表*/
+.pc .pcR .promoList table{
+	width: 100%;
+}
+.pc .pcR .promoList table th{
+	font-weight: normal;
+	font-size: 14px;
+	height: 30px;
+	line-height: 30px;
+	background: #ededed;
+	border: 1px solid #fff;
+	color: #555;
+}
+.pc .pcR .promoList table td{
+	height: 30px;
+	line-height: 30px;
+	text-align: center;
+	background: #f4f4f4;
+	color: #777;
+}
+/*我的奖励*/
+.pc .pcR .reward table{
+	width: 100%;
+	margin-top: 40px;
+}
+.pc .pcR .reward table th{
+	font-weight: normal;
+	font-size: 14px;
+	height: 30px;
+	line-height: 30px;
+	background: #ededed;
+	border: 1px solid #fff;
+	color: #555;
+}
+.pc .pcR .reward table td{
+	height: 30px;
+	line-height: 30px;
+	text-align: center;
+	background: #f4f4f4;
+	color: #777;
+}
+.pc .pcR .reward table td a{
+	color: #E60000;
+}
+.pc .pcR .reward table td a:hover{
+	text-decoration: underline;
+}
 
 
 
