--- a/Application/Admin/View/themes/Index/index.html
+++ b/Application/Admin/View/themes/Index/index.html
@@ -102,7 +102,7 @@
 	    </div>
 	    <div class="row  border-bottom white-bg dashboard-header">
 	        <div class="col-sm-3">
-	            <h2>Hello,Beaut-zihan</h2>
+	            <h2>Hello,{:get_nickname()}</h2>
 	            <small>您有32条消息和6个待处理事项</small>
 	            <ul class="list-group clear-list m-t">
 	                <li class="list-group-item fist-item">
