--- a/Application/Home/View/themes/Public/left.html
+++ b/Application/Home/View/themes/Public/left.html
@@ -41,9 +41,9 @@
 				<!--推广管理-->
 				<ul>
 					<li><h4 style="background: url(images/pcLIcons.png) no-repeat 15px -160px;">推广管理</h4></li>
-					<li><a href="javascript:;">友情推广</a></li>
-					<li><a href="javascript:;">推广列表</a></li>
-					<li><a href="javascript:;">我的奖励</a></li>
+					<li><a href="{:U('User/yqtg')}">友情推广</a></li>
+					<li><a href="{:U('User/tglb')}">推广列表</a></li>
+					<li><a href="{:U('User/wdjl')}">我的奖励</a></li>
 				</ul>
 			</div>
 			<!--左边栏	pcL end-->
