--- a/Application/Admin/View/themes/Public/head.html
+++ b/Application/Admin/View/themes/Public/head.html
@@ -23,6 +23,16 @@
     <link href="__PUBLIC__/Admin/css/plugins/summernote/summernote.css" rel="stylesheet">
     <link href="__PUBLIC__/Admin/css/plugins/summernote/summernote-bs3.css" rel="stylesheet">
 
+    <!-- Data Tables -->
+    <link href="__PUBLIC__/Admin/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
+
+    <link href="__PUBLIC__/Admin/css/plugins/jQueryUI/jquery-ui-1.10.4.custom.min.css" rel="stylesheet">
+    <!-- Data Tables -->
+    <link href="__PUBLIC__/Admin/css/plugins/jqgrid/ui.jqgrid.css" rel="stylesheet">
+
+
+
+
     <!-- Mainly scripts -->
     <script src="__PUBLIC__/Admin/js/jquery-2.1.1.min.js"></script>
     <script src="__PUBLIC__/Admin/js/bootstrap.min.js?v=3.4.0"></script>
@@ -73,9 +83,45 @@
     <script src="__PUBLIC__/Admin/js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
     <script src="__PUBLIC__/Admin/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
     
+    <!-- jqGrid -->
+    <script src="__PUBLIC__/Admin/js/plugins/jqgrid/i18n/grid.locale-cn.js"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/jqgrid/jquery.jqGrid.min.js"></script>
 
     <!-- ChartJS-->
     <script src="__PUBLIC__/Admin/js/plugins/chartJs/Chart.min.js"></script>
+
+    <!-- ECharts -->
+    <script src="__PUBLIC__/Admin/js/plugins/echarts/echarts-all.js"></script>
+    
+    <!-- ECharts demo data -->
+    <script src="__PUBLIC__/Admin/js/demo/echarts-demo.js"></script>
+    
+    <!-- Flot demo data -->
+    <script src="__PUBLIC__/Admin/js/demo/flot-demo.js"></script>   
+
+    <script src="__PUBLIC__/Admin/js/plugins/jeditable/jquery.jeditable.js"></script>
+
+    <!-- Data Tables -->
+    <script src="__PUBLIC__/Admin/js/plugins/dataTables/jquery.dataTables.js"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/dataTables/dataTables.bootstrap.js"></script>
+
+
+
+	    <!-- Mainly scripts -->
+    <script src="__PUBLIC__/Admin/js/jquery-2.1.1.min.js"></script>
+    <script src="__PUBLIC__/Admin/js/bootstrap.min.js?v=3.4.0"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+
+    <script src="__PUBLIC__/Admin/js/plugins/jeditable/jquery.jeditable.js"></script>
+
+    <!-- Data Tables -->
+    <script src="__PUBLIC__/Admin/js/plugins/dataTables/jquery.dataTables.js"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/dataTables/dataTables.bootstrap.js"></script>
+
+    <!-- Custom and plugin javascript -->
+    <script src="__PUBLIC__/Admin/js/hplus.js?v=2.2.0"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/pace/pace.min.js"></script>
 </head>
 
 </html>
